removed the nav icon button

--- a/bugTracker.html
+++ b/bugTracker.html
@@ -164,5 +164,5 @@
         <li><a href="#!" id="current">Current Issues</a></li>
         <li><a href="#!" id="resoved">Resolved Issues</a></li>
     </ul>
-    <a href="#" data-activates="slide-out" class="button-collapse btn"><i class="mdi-navigation-menu"></i></a>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 </template>
