Added all filter

--- a/bugTracker.html
+++ b/bugTracker.html
@@ -47,6 +47,14 @@
         {{/if}}
     {{/if}}
 </div>
+<footer class="">
+    <div class="">
+        <div class="container">
+            <div class="details center">Made with <i class="material-icons tiny">favorite</i> from Nairobi by <a href="//github.com/morrismukiri">@morrismukiri</a></div>
+
+        </div>
+    </div>
+</footer>
 </body>
 
 <template name="issue">
@@ -161,8 +169,9 @@
 </template>
 <template name="sidenav">
     <ul id="slide-out" class="side-nav fixed">
+        <li><a href="#!" id="all">All</a></li>
         <li><a href="#!" id="current">Current Issues</a></li>
-        <li><a href="#!" id="resoved">Resolved Issues</a></li>
+        <li><a href="#!" id="resolved">Resolved Issues</a></li>
     </ul>
     <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 </template>
