Added github link to footer

--- a/bugTracker.html
+++ b/bugTracker.html
@@ -50,8 +50,9 @@
 <footer class="">
     <div class="">
         <div class="container">
-            <div class="details center">Made with <i class="material-icons tiny">favorite</i> from Nairobi by <a href="//github.com/morrismukiri">@morrismukiri</a></div>
-
+            <div class="details center">Made with <i class="material-icons tiny">favorite</i> from Nairobi by <a href="//github.com/morrismukiri">@morrismukiri</a><br/>
+                <a class="github-button right" href="https://github.com/morrismukiri/bugtracker" aria-label="Star morrismukiri/bugtracker on GitHub">Star</a>
+            </div>
         </div>
     </div>
 </footer>
