changed file structure,removed autopublish, added orion

--- a/bugTracker.html
+++ b/bugTracker.html
@@ -6,52 +6,53 @@
 </head>
 <body class="container">
 <!--<ul id="slide-out" class="side-nav fixed">-->
-    <!--<li><a href="#!">First Sidebar Link</a></li>-->
-    <!--<li><a href="#!">Second Sidebar Link</a></li>-->
+<!--<li><a href="#!">First Sidebar Link</a></li>-->
+<!--<li><a href="#!">Second Sidebar Link</a></li>-->
 <!--</ul>-->
 <!--<a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>-->
+<div class="login align-right">{{> loginButtons}}</div>
+{{#if currentUser}}
+    <div class="sidenav">{{>sidenav}}</div>
 
-<div class="sidenav">{{>sidenav}}</div>
-<div class="main">
+    <div class="main">
 
 
-    <div class="fixed-action-btn" style="">
-        <a class="btn-floating btn-large waves-effect waves-circle btn-floating secondary-content red" id="addBtn">
-            <i class="large material-icons">mode_edit</i>
-        </a>
-        <!--<ul>-->
-        <!--<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>-->
-        <!--<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>-->
-        <!--<li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>-->
-        <!--<li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>-->
-        <!--</ul>-->
+        <div class="fixed-action-btn" style="">
+            <a class="btn-floating btn-large waves-effect waves-circle btn-floating secondary-content red" id="addBtn">
+                <i class="large material-icons">mode_edit</i>
+            </a>
+            <!--<ul>-->
+            <!--<li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>-->
+            <!--<li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>-->
+            <!--<li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>-->
+            <!--<li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>-->
+            <!--</ul>-->
+        </div>
+        <!--<a class="waves-effect waves-light btn">Add</a>-->
+        <!--<div class="container">-->
+
+                <!--</div>-->
+                <ul class="colection">
+                    {{#each issues}}
+                        {{> issue }}
+                    {{else}}
+                        <h4>No Bugs reported yet</h4>
+                        {{> addIssue}}
+                    {{/each}}
+                </ul>
+            {{! /if}}
+        {{! /if}}
     </div>
-    <!--<a class="waves-effect waves-light btn">Add</a>-->
-    <!--<div class="container">-->
-    {{#if showAdd }}
-        {{> addIssue}}
-
-    {{else}}
-        {{#if showEdit}}
-            {{> editIssue}}
-        {{else}}
-            <!--</div>-->
-            <ul class="colection">
-                {{#each issues}}
-                    {{> issue }}
-                {{else}}
-                    <h4>No Bugs reported yet</h4>
-                    {{> addIssue}}
-                {{/each}}
-            </ul>
-        {{/if}}
-    {{/if}}
-</div>
+{{else}}
+    <h1>Please login to view current issues </h1>
+{{/if}}
 <footer class="">
     <div class="">
         <div class="container">
-            <div class="details center">Made with <i class="material-icons tiny">favorite</i> from Nairobi by <a href="//github.com/morrismukiri">@morrismukiri</a><br/>
-                <a class="github-button right" href="https://github.com/morrismukiri/bugtracker" aria-label="Star morrismukiri/bugtracker on GitHub">Star</a>
+            <div class="details center">Made with <i class="material-icons tiny">favorite</i> from Nairobi by <a
+                    href="//github.com/morrismukiri">@morrismukiri</a><br/>
+                <a class="github-button right" href="https://github.com/morrismukiri/bugtracker"
+                   aria-label="Star morrismukiri/bugtracker on GitHub">Star</a>
             </div>
         </div>
     </div>
@@ -80,7 +81,8 @@
 
                     <form action="#" class="right">
                         <p>
-                            <input type="checkbox" id="chk{{_id}}" name="complete" class="completeCheck" checked="{{closed}}"/>
+                            <input type="checkbox" id="chk{{_id}}" name="complete" class="completeCheck"
+                                   checked="{{closed}}"/>
                             <label for="chk{{_id}}">Complete</label>
                         </p>
                     </form>
